--- a/media.html
+++ b/media.html
@@ -6,10 +6,10 @@
 
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<title>Strawberry Photon - Media</title>
+<title>Strawberry Photon - Video and Audio</title>
 
 <meta name="description" content="Media clips">
-<meta name="keywords" content="HTML,CSS,JavaScript">
+<meta name="keywords" content="video,audio,poetry">
 <meta name="author" content="Rosalind Tattersdill">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -48,30 +48,35 @@
 
 <div id="incHeader"></div>
 <div id="incMenu"></div>
-
 <main>
-<h2>Media</h2>
-<p>Please enjoy these audio and video clips.</p>
+<h2>Video &amp; Audio</h2>
+<p>Please enjoy these short clips.</p>
 
 
 
 <h3>Hope</h3>
+<p>This public domain recording of Hope by Emily Dickinson, read in English by Ann Simmons, is available from the <a href="https://archive.org/details/hope_1311.poem_librivox" target="_blank">Internet Archive</a>.
+</p>
 <audio controls>
-  <source src="media/hope_dickinson_as_128kb.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
+<source src="media/hope_dickinson_as_128kb.mp3" type="audio/mpeg">
+<source src="media/hope_dickinson_as.ogg" type="audio/ogg">
+<p><a href="https://ia601001.us.archive.org/6/items/hope_1311.poem_librivox/hope_dickinson_as_128kb.mp3">Play audio</a>.</p>
 </audio>
 
 <h3>The Great Longing</h3>
+<p>This public domain recording of The Great Longing by Kahlil Gibran, produced by Othniel Smith, is available from the <a href="https://archive.org/details/theGreatLongingByKahlilGibran" target="_blank">Internet Archive</a></p>
 <video controls>
-  <source src="media/TheGreatLonging.mp4" type="video/mp4">
-  Your browser does not support the video tag.
+<source src="media/TheGreatLonging.mp4" type="video/mp4">
+<source src="media/TheGreatLonging.ogv" type="video/ogg">
+<p><a href="https://ia800703.us.archive.org/17/items/theGreatLongingByKahlilGibran/Longing.mp4">Play video</a>.</p>
 </video>
 
+<h3>A Prairie Sunset</h3>
+<p>LibriVox volunteers bring us 16 recordings of A Prairie Sunset by Walt Whitman.</p>
+<div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cuc095yoZJ4?rel=0" frameborder="0" allowfullscreen></iframe></div>
+
 </main>
-
-<div id="incFooter"></div>
-</div>
-
+<div id="incFooter"></div></div>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 
 <script src="js/plugins.js"></script>
