--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <ul><a href="index.html"><li>Home</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li><a href="media.html">Media</a></li>
+<li><a href="media.html">Video &amp; Audio</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 </ul>
 </nav>
