--- a/header.html
+++ b/header.html
@@ -1,1 +1,1 @@
-<header><h1>Strawberry Photon Design</h1></header>
+<header><h1><a href="index.html">Strawberry Photon Web Development</a></h1></header>
