--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#f0f0f0">
+<meta name="theme-color" content="#fbf8f9">
 <link rel="stylesheet" href="css/normalize.css">
 
 <link rel="stylesheet" href="css/main.css">
