--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,8 @@
 
 <script src="js/vendor/jquery-1.12.0.min.js"></script>
 
+<script src="js/main.js"></script>
+
 <script>$(function(){$("#incHeader").load("header.html");});</script>
 <script>$(function(){$("#incFooter").load("footer.html");});</script>
 <script>$(function(){$("#incMenu").load("menu.html");});</script>
@@ -51,26 +53,14 @@
 
 <main>
 <h2>Contact</h2>
-<p>Use the form below to contact me with any enquiries.</p>
+<p>Please contact me at <script type="text/javascript">
+document.write('<a href="mailto:'+efirst + '@' + elast+'">'+efirst + '@' + elast+'<\/a>');
+</script>
+ with any questions or comments.</p>
 
 
 
-<form action="mailto:someone@example.com" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Comment:<br>
-<input type="text" name="comment" size="50"><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
-
-</main>
-
-<div id="incFooter"></div>
-</div>
-
+</main><div id="incFooter"></div></div>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 
 <script src="js/plugins.js"></script>
