--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="incMenu"></div>
 
 <main>
-<p>Hello world! This is my new website.</p>
+<p>This demo website contains some HTML, CSS and Javascript examples.</p>
 
 
 
