--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,6 @@
 <nav>
-<ul><a href="index.html"><li>Home</a></li>
+<ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li><a href="media.html">Video &amp; Audio</a></li>
 <li><a href="gallery.html">Gallery</a></li>
