--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 
 
+<a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 </main>
 
 <div id="incFooter"></div>
