--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="media.html">Video &amp; Audio</a></li>
-<li><a href="gallery.html">Gallery</a></li>
+<li><a href="index.html" title="Home">Home</a></li>
+<li><a href="contact.html" title="Contact">Contact</a></li>
+<li><a href="media.html" title="Video &amp; Audio">Video &amp; Audio</a></li>
+<li><a href="gallery.html" title="Gallery">Gallery</a></li>
 </ul>
 </nav>
